# modbus-tcp-simulation

./: .gitlab-ci.yml  Cargo.toml  DOCKER_HUB.md  Dockerfile  QUICK_START.md  README.md  build-docker.ps1  docker-compose.dev.yml  docker-compose.ps1  docker-compose.yml  dockerfile
.gitea/workflows/: ci.yml
.githooks/: commit-msg
.github/workflows/: ci.yml  docker-build.yml
src/: main.rs
src/service/: mod.rs
src/service/http/: api.rs  context.rs  limits.rs  mod.rs  routes.rs  state.rs  swagger.rs  types.rs
src/service/mcp/: mod.rs  server.rs
src/service/modbus/: builder.rs  interfaces.rs  mod.rs  modbus_service.rs  store.rs
static/: app.js  i18n.js  index.html  manifest.json  style.css  sw.js
