[package]
name = "modbus-tcp-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
rocket = "0.5.0-rc.3"
tokio = "1.28.2"
tokio-modbus = { version = "*", default-features = false, features = ["tcp-server"] }
