[package]
name = "modbus_tcp_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio = "1.28.2"
tokio-modbus = { version = "0.8.1", default-features = false, features = ["tcp-server"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
utoipa =  { version = "3.3.0", features = ["rocket_extras"] }
utoipa-swagger-ui =  { version = "3.1.3", features = ["rocket"] }
rmcp = { version = "1.3.0", features = ["server", "transport-streamable-http-server", "schemars"] }
axum = { version = "0.8.8", features = ["tokio"] }



[[bin]]
name = "modbus_tcp_server_rust"
path = "src/main.rs"
